Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/CommisionPaid__c.field-meta.xml
<CustomField>
    <fullName>CommisionPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommisionPaid</label>
    <type>Checkbox</type>
</CustomField>