Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Cost_Incurred_In_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Cost_Incurred_In_Promotions__c</fullName>
    <label>Cost Incurred In Promotions</label>
    <summarizedField>UB_Promotion__c.UB_PromotionalCost__c</summarizedField>
    <summaryForeignKey>UB_Promotion__c.UB_Outlet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>