Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Current_Number_Of_Events__c.field-meta.xml
<CustomField>
    <fullName>Current_Number_Of_Events__c</fullName>
    <label>Total Number Of Events</label>
    <summaryForeignKey>UB_Event__c.Outlet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>