Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Current_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Order_Amount__c</fullName>
    <label>Total Order Amount</label>
    <summarizedField>UB_Order__c.UB_Total_Price__c</summarizedField>
    <summaryForeignKey>UB_Order__c.UB_Outlet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>