Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/LS_Account__c.field-meta.xml
<CustomField>
    <fullName>LS_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Account</label>
    <type>Checkbox</type>
</CustomField>