Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Geographic segmentation of sales territories within a Zone.</description>
    <inlineHelpText>Geographic alignment of sales territories.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AU - Australia</fullName>
            </value>
            <value>
                <fullName>AU - NSW-ACT</fullName>
            </value>
            <value>
                <fullName>AU - QLD</fullName>
            </value>
            <value>
                <fullName>AU - SA-NT</fullName>
            </value>
            <value>
                <fullName>AU - VIC-TAS</fullName>
            </value>
            <value>
                <fullName>AU - WA</fullName>
            </value>
            <value>
                <fullName>BN - Brunei Darussalam</fullName>
            </value>
            <value>
                <fullName>BT - Bhutan</fullName>
            </value>
            <value>
                <fullName>CA - Central</fullName>
            </value>
            <value>
                <fullName>CA - East</fullName>
            </value>
            <value>
                <fullName>CA - West</fullName>
            </value>
            <value>
                <fullName>Central_Europe</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>ID - Indonesia</fullName>
            </value>
            <value>
                <fullName>IN - Ahmedabad</fullName>
            </value>
            <value>
                <fullName>IN - Bangalore</fullName>
            </value>
            <value>
                <fullName>IN - Bhopal</fullName>
            </value>
            <value>
                <fullName>IN - Bhubaneshwar</fullName>
            </value>
            <value>
                <fullName>IN - Chandigarh</fullName>
            </value>
            <value>
                <fullName>IN - Chennai</fullName>
            </value>
            <value>
                <fullName>IN - Cochin</fullName>
            </value>
            <value>
                <fullName>IN - Colombo</fullName>
            </value>
            <value>
                <fullName>IN - Delhi</fullName>
            </value>
            <value>
                <fullName>IN - Dhaka</fullName>
            </value>
            <value>
                <fullName>IN - Goa</fullName>
            </value>
            <value>
                <fullName>IN - Guwahati</fullName>
            </value>
            <value>
                <fullName>IN - Hyderabad</fullName>
            </value>
            <value>
                <fullName>IN - Jaipur</fullName>
            </value>
            <value>
                <fullName>IN - Kandy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>