Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Subcategories__c.field-meta.xml
<CustomField>
    <fullName>Subcategories__c</fullName>
    <label>Subcategories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Ball</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Elep</fullName>
            </value>
            <value>
                <fullName>Frog</fullName>
            </value>
            <value>
                <fullName>Horse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>