Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <label>Template Body</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>