Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Total_Expenditure_In_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenditure_In_Events__c</fullName>
    <label>Total Expenditure In Events</label>
    <summarizedField>UB_Event__c.UB_ActualEventCost__c</summarizedField>
    <summaryForeignKey>UB_Event__c.Outlet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>