Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Total_Number_Of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Orders__c</fullName>
    <label>Total Number Of Orders</label>
    <summaryForeignKey>UB_Order__c.UB_Outlet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>