Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Total_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Count__c</fullName>
    <inlineHelpText>Using Flow</inlineHelpText>
    <label>Total Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>