Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Total_Oppty_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Oppty_Count__c</fullName>
    <label>Total Oppty Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>