Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Category__c.field-meta.xml
<CustomField>
    <fullName>UB_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Non Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>