Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Discount__c.field-meta.xml
<CustomField>
    <fullName>UB_Discount__c</fullName>
    <label>Discount (%)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UB_Gradation__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>