Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Gradation__c.field-meta.xml
<CustomField>
    <fullName>UB_Gradation__c</fullName>
    <label>Gradation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>