Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_KAM__c.field-meta.xml
<CustomField>
    <fullName>UB_KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>