Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Location__c.field-meta.xml
<CustomField>
    <fullName>UB_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>