Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>UB_Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>Off Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>