Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/UB_Region__c.field-meta.xml
<CustomField>
    <fullName>UB_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>