Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Volume_Sales_Target_for_Year__c.field-meta.xml
<CustomField>
    <fullName>Volume_Sales_Target_for_Year__c</fullName>
    <label>Volume Sales Target for Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>