Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Yearly_Activity_Target__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Activity_Target__c</fullName>
    <label>Yearly Activity Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>