Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Yearly_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Revenue_Target__c</fullName>
    <label>Yearly Revenue Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>