Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Yearly_Target_for_Promotional_Event__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Target_for_Promotional_Event__c</fullName>
    <label>Yearly Target for Promos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>