Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Yearly_Target_Promotional_Event_Value__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Target_Promotional_Event_Value__c</fullName>
    <label>Yearly Target Promo Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>