Reetan.Nayak Dev 25/force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>High level geographic alignment of sales teams; comprised of regions.</description>
    <inlineHelpText>Grouping of geographic sales territory regions.</inlineHelpText>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASEAN - ID</fullName>
            </value>
            <value>
                <fullName>ASEAN - PH</fullName>
            </value>
            <value>
                <fullName>ASEAN - SG,MY,BN,KH</fullName>
            </value>
            <value>
                <fullName>ASEAN - TH,MM,LA</fullName>
            </value>
            <value>
                <fullName>ASEAN - VN</fullName>
            </value>
            <value>
                <fullName>AU - Australia</fullName>
            </value>
            <value>
                <fullName>AU - NSW-ACT</fullName>
            </value>
            <value>
                <fullName>AU - QLD</fullName>
            </value>
            <value>
                <fullName>AU - SA-NT</fullName>
            </value>
            <value>
                <fullName>AU - VIC-TAS</fullName>
            </value>
            <value>
                <fullName>AU - WA</fullName>
            </value>
            <value>
                <fullName>BN - Brunei Darussalam</fullName>
            </value>
            <value>
                <fullName>BT-Bhutan</fullName>
            </value>
            <value>
                <fullName>CA - Central</fullName>
            </value>
            <value>
                <fullName>CA - East</fullName>
            </value>
            <value>
                <fullName>CA - West</fullName>
            </value>
            <value>
                <fullName>CE_Austria</fullName>
            </value>
            <value>
                <fullName>CE_Central_Zone</fullName>
            </value>
            <value>
                <fullName>CE_North_Zone</fullName>
            </value>
            <value>
                <fullName>CE_South_Zone</fullName>
            </value>
            <value>
                <fullName>CE_Switzerland</fullName>
            </value>
            <value>
                <fullName>Central &amp; East</fullName>
            </value>
            <value>
                <fullName>France_DOM_TOM</fullName>
            </value>
            <value>
                <fullName>France_East</fullName>
            </value>
            <value>
                <fullName>France_IDF_North</fullName>
            </value>
            <value>
                <fullName>France_South</fullName>
            </value>
            <value>
                <fullName>France_West</fullName>
            </value>
            <value>
                <fullName>Germany_Central</fullName>
            </value>
            <value>
                <fullName>Germany_East</fullName>
            </value>
            <value>
                <fullName>Germany_North</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>