Reetan.Nayak Dev 25/force-app/main/default/objects/Account/validationRules/NoOfLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>NoOfLocation</fullName>
    <active>false</active>
    <errorConditionFormula>NumberofLocations__c = 100</errorConditionFormula>
    <errorMessage>Location cannot be 100</errorMessage>
</ValidationRule>